feat(delivery): complete operation after address confirmation
